MP panel font size and spacing fixes

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -54,7 +54,18 @@
 }
 
 #mp-panel {
+    padding-bottom: 0px;
     margin-bottom: 0px;
+    h1 {
+        line-height: 1;
+        margin-top: 0px;
+        margin-bottom: 0.2em;
+    }
+
+    h3 {
+        margin-top: 0px;
+        font-weight: 100;
+    }
 }
 
 .person-subnav {
